--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "lodash": "^4.17.21",
         "lucide-react": "^0.441.0",
         "qrcode.react": "^4.0.1",
+        "react-barcode": "^1.5.3",
         "react-day-picker": "^8.10.1",
         "react-hook-form": "^7.53.0",
         "recharts": "^2.12.7",
